--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cssnano": "^6.0.1",
     "rollup": "^4.6.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-vue": "^6.0.0"
   }
 }
