--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.3",
   "description": "A Infinite Loading Component for Vue 3",
   "main": "./dist/esm/index.js",
-  "types": "./types/index.d.ts",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "keywords": [
     "vue3",
@@ -32,11 +32,11 @@
   "exports": {
     ".": {
       "import": {
-        "types": "./types/index.d.ts",
+        "types": "./dist/index.d.ts",
         "default": "./dist/esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./dist/index.d.ts",
         "default": "./dist/lib/index.js"
       }
     },
