--- a/.travis.yml
+++ b/.travis.yml
@@ -47,16 +47,16 @@ jobs:
         run: cd demo # or pnpm install / yarn install / bun install
       - name: Install dependencies
         run: npm ci
-      - name: cd project
+      - name: cd ..
         run: cd ..
       - name: Build with demo
         run: |
-          npm run build:demo # or pnpm build / yarn build / bun run build
-          touch demo/dist/.nojekyll
+          npm run build:demo
+          touch docs/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: demo/dist
+          path: docs
 
   # Deployment job
   deploy:
