--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "npm run build && cd demo && npm run dev",
-    "build:demo": "npm run build && cd demo && npm run build",
+    "build:demo": "npm run build && cd demo && npm install && npm run build",
     "pre-release": "git checkout main && git pull",
     "branch-merge": "git push --tags && git push",
     "release-patch": "npm run pre-release && npm version patch -m \"tag: Version updated to %s patch\" && npm run branch-merge",
